// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer bg-theme-background"
      data-testid="Card"
    >
      <div
        class="flex flex-col p-4 space-y-8 bg-theme-background"
      >
        <div
          class="flex justify-between w-full"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              aria-label="ARK"
              class="Circle-uw7h4j-0 hvqrfp border-theme-danger-200 text-theme-danger-400"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div>
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-ARK Ecosystem"
              >
                ARK Ecosystem
              </h4>
              <div
                class="flex items-center space-x-4"
              >
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__author"
                >
                  Travis Walker, Co-Founder
                </p>
                <div
                  class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
                  type="vertical"
                />
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="timeago"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="Label-sc-1tj9hzr-0 ftOOah"
              color="warning"
            >
              <span
                class="text-sm"
                data-testid="NewsCard__category"
              >
                #Technical
              </span>
            </div>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
          <a
            class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
          >
            <span
              class="underline-dotted"
            >
              https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
            </span>
            <div
              class="sc-bdfBwQ fPrsah flex-shrink-0 ml-2 text-sm"
              data-testid="Link__external"
              height="1em"
              width="1em"
            >
              <svg>
                redirect.svg
              </svg>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewsCard should render with cover image 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer bg-theme-background"
      data-testid="Card"
    >
      <div
        class="flex flex-col p-4 space-y-8 bg-theme-background"
      >
        <div
          class="flex justify-between w-full"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              aria-label="ARK"
              class="Circle-uw7h4j-0 hvqrfp border-theme-danger-200 text-theme-danger-400"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div>
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-ARK Ecosystem"
              >
                ARK Ecosystem
              </h4>
              <div
                class="flex items-center space-x-4"
              >
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__author"
                >
                  Travis Walker, Co-Founder
                </p>
                <div
                  class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
                  type="vertical"
                />
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="timeago"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="Label-sc-1tj9hzr-0 ftOOah"
              color="warning"
            >
              <span
                class="text-sm"
                data-testid="NewsCard__category"
              >
                #Marketing
              </span>
            </div>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          June is over and it's time for the Monthly Update. This blog post will cover last month’s highlights, activities, development, partner activities, news and updates of our upcoming releases. 
          <a
            class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36"
          >
            <span
              class="underline-dotted"
            >
              https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36
            </span>
            <div
              class="sc-bdfBwQ fPrsah flex-shrink-0 ml-2 text-sm"
              data-testid="Link__external"
              height="1em"
              width="1em"
            >
              <svg>
                redirect.svg
              </svg>
            </div>
          </a>
        </div>
        <div
          class="flex justify-center p-1 -mx-10 border-t-2 border-theme-primary-100 dark:border-theme-secondary-800"
        >
          <img
            alt="ARK Banner"
            src="https://via.placeholder.com/150"
          />
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
